--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-host=31.187.76.251
+host2=31.187.76.251
+host=localhost
 port=3306
 database=robertodb
-username=adminIts
-password=adminITS22
+username2=adminIts
+username=root
+password2=adminITS22
+password=
