--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-validator": "^6.14.2",
     "promise-mysql": "^5.2.0",
     "uuid": "^9.0.0"
   }
