--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "promise-mysql": "^5.2.0",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   }
 }
