--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-host2=31.187.76.251
-host=localhost
+host=149.50.128.86
 port=3306
-database=robertodb
-username2=adminIts
-username=root
-password2=adminITS22
-password=
+database=portfolio_db
+username=raqueveque
+password=password
