--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
+    "mysql2": "^3.6.5",
     "promise-mysql": "^5.2.0",
     "swagger-jsdoc": "^6.2.7",
     "swagger-ui-express": "^4.6.0",
